--- a/blogicum/blog/templates/blog/index.html
+++ b/blogicum/blog/templates/blog/index.html
@@ -1,7 +1,7 @@
+{% load static %}
 <!DOCTYPE html>
-{% load static %} 
 <html lang="ru"> 
-  <head>    
+  <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" href="{% static 'img/fav/favicon.ico' %}" type="image">
@@ -16,7 +16,7 @@
       <nav class="navbar navbar-light" style="background-color: lightskyblue">
         <div class="container">
           <a class="navbar-brand" href="index.html">
-            <img src="img/logo.png" width="30" height="30" class="d-inline-block align-top" alt="">
+            <img src="{% static 'img/logo.png' %}" width="30" height="30" class="d-inline-block align-top" alt="">
             Блогикум
           </a>        
           <ul class="nav  nav-pills">
@@ -59,7 +59,7 @@
             </ul>          
             <!-- Первые 10 слов -->
             <p>
-              {{ post.text }}
+              {{ post.text|truncatewords:10  }}
             </p>
             <a href="detail.html">Читать полный текст</a>
           </article>
