--- a/blogicum/blog/templates/blog/category.html
+++ b/blogicum/blog/templates/blog/category.html
@@ -53,7 +53,7 @@
                 Дата: {{ post.date }}
               </li>
               <li>
-                Категория: <a href="category/{{ post.category }}">{{ post.category }}</a>
+                Категория: <a href="{% url 'blog:category_posts' post.category %}">{{ post.category }}</a>
               </li>
             </ul>          
             <!-- Первые 10 слов -->
