Change template dir

--- a/blogicum/templates/detail.html
+++ b/blogicum/templates/detail.html
@@ -27,7 +27,7 @@
               </a>
             </li>
             <li class="nav-item">              
-              <a class="nav-link" href="{% url 'about.html' %}">
+              <a class="nav-link" href="about.html">
                 О проекте
               </a>
             </li>
