--- a/blogicum/templates/blog/category.html
+++ b/blogicum/templates/blog/category.html
@@ -1,7 +1,7 @@
 {% load static %}
-<!DOCTYPE html>
+<!DOCTYPE html> 
 <html lang="ru"> 
-  <head>
+  <head>    
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" href="{% static 'img/fav/favicon.ico' %}" type="image">
@@ -9,29 +9,29 @@
     <link rel="icon" type="image/png" sizes="32x32" href="{% static 'img/fav/favicon-32x32.png' %}">
     <link rel="icon" type="image/png" sizes="16x16" href="{% static 'img/fav/favicon-16x16.png' %}">
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
-    <title>Лента записей</title>
+    <title>Публикации в категории - {{ slug_category }}</title>
   </head>
   <body>	   
     <header>
       <nav class="navbar navbar-light" style="background-color: lightskyblue">
         <div class="container">
-          <a class="navbar-brand" href="index.html">
+          <a class="navbar-brand" href="{% url 'blog:index' %}">
             <img src="{% static 'img/logo.png' %}" width="30" height="30" class="d-inline-block align-top" alt="">
             Блогикум
           </a>        
           <ul class="nav  nav-pills">
             <li class="nav-item">
-              <a class="nav-link active" href="index.html">
+              <a class="nav-link" href="{% url 'blog:index' %}">
                 Лента записей
               </a>
             </li>
             <li class="nav-item">              
-              <a class="nav-link" href="about.html">
+              <a class="nav-link" href="{% url 'pages:about' %}">
                 О проекте
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="rules.html">
+              <a class="nav-link" href="{% url 'pages:rules' %}">
                 Наши правила
               </a>
             </li>
@@ -41,9 +41,8 @@
     </header>
     <main>
       <div class="container py-5">
-        <h1>Лента записей</h1>                        
-        <!-- Перебираем в цикле все посты -->
-        {% for post in posts %}
+        <h1>Публикации в категории - {{ slug_category }}</h1>
+        {% for post in filtered_posts %}
           <hr>
           <article>
             <ul>
@@ -59,11 +58,11 @@
             </ul>          
             <!-- Первые 10 слов -->
             <p>
-              {{ post.text|truncatewords:10  }}
+              {{ post.text }}
             </p>
-            <a href={% url 'blog:post_detail' post.id %}>Читать полный текст</a>
+            <a href="{% url 'blog:post_detail' post.id %}">Читать полный текст</a>
           </article>
-        {% endfor %}           
+        {% endfor %}  
       </div>
     </main>
     <footer class="border-top text-center py-3">
