--- a/blogicum/templates/pages/about.html
+++ b/blogicum/templates/pages/about.html
@@ -1,7 +1,7 @@
-{% load static %}
 <!DOCTYPE html>
+{% load static %}
 <html lang="ru"> 
-  <head> 
+  <head>    
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" href="{% static 'img/fav/favicon.ico' %}" type="image">
@@ -9,30 +9,29 @@
     <link rel="icon" type="image/png" sizes="32x32" href="{% static 'img/fav/favicon-32x32.png' %}">
     <link rel="icon" type="image/png" sizes="16x16" href="{% static 'img/fav/favicon-16x16.png' %}">
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
-    <!-- Формируется из локации и даты -->
-    <title>Остров отчаянья. 25 октября 1659 года</title>
+    <title>О проекте</title>
   </head>
   <body>	   
     <header>
       <nav class="navbar navbar-light" style="background-color: lightskyblue">
         <div class="container">
-          <a class="navbar-brand" href="index.html">
+          <a class="navbar-brand" href="{% url 'blog:index' %}">
             <img src="{% static 'img/logo.png' %}" width="30" height="30" class="d-inline-block align-top" alt="">
             Блогикум
           </a>        
           <ul class="nav  nav-pills">
             <li class="nav-item">
-              <a class="nav-link" href="index.html">
+              <a class="nav-link" href="{% url 'blog:index' %}">
                 Лента записей
               </a>
             </li>
             <li class="nav-item">              
-              <a class="nav-link" href="about.html">
+              <a class="nav-link active" href="{% url 'pages:about' %}">
                 О проекте
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="rules.html">
+              <a class="nav-link" href="{% url 'pages:rules' %}">
                 Наши правила
               </a>
             </li>
@@ -41,23 +40,22 @@
       </nav> 
     </header>
     <main>
-      <div class="container py-5">
-        <article>
-          <ul>
-            <li>
-              Место: {{ post.location }}             
-            </li>
-            <li>
-              Дата: {{ post.date }}
-            </li>
-            <li>
-              Категория: <a href={% url 'blog:category_posts' post.category %}>{{ post.category }}</a>
-            </li>
-          </ul>         
-          <p>
-            {{ post.text }}
-          </p>          
-        </article>                
+      <div class="container py-5">                        
+        <h1>О проекте</h1>
+        <p>
+          Блогикум — это дом для творческих людей. Это — сообщество людей, для которых 
+          нет грани между ведением блога и дружбой в социальных сетях. 
+        </p>
+        <p>
+          Дружба и рассказы о новых, неизведанных впечатлениях — вот 
+          что вы найдете на нашем ресурсе.  Миллионы блогов по различным темам. 
+          Путешествия, политики, развлечения, мода, мода, литература, дизайн и все 
+          другие сферы человеческой деятельности. 
+        </p>
+        <p>
+          Творчество, разнообразие и свобода взглядов и самовыражения — 
+          основные черты наших пользователей.
+        </p>           
       </div>
     </main>
     <footer class="border-top text-center py-3">
