--- a/blogicum/templates/blog/category.html
+++ b/blogicum/templates/blog/category.html
@@ -1,8 +1,9 @@
 {% extends "base.html" %}
-{% block title %}Публикации в категории - {{ slug_category }}{% endblock %}
-              {% block a_class %}
-              <a class="nav-link" href="{% url 'blog:index' %}">
-              {% endblock %}
-        {% block content %}
-        <h1>Публикации в категории - {{ slug_category }}</h1>
-        {% endblock %}
+
+{% block title %}
+  Публикации в категории - {{ slug_category }}
+{% endblock %}
+
+{% block content %}
+  <h1>Публикации в категории - {{ slug_category }}</h1>
+{% endblock %}
