--- a/blogicum/templates/blog/index.html
+++ b/blogicum/templates/blog/index.html
@@ -1,30 +1,15 @@
 {% extends "base.html" %}
-{% block title %}Лента записей{% endblock %}
-              {% block a_class %}
-              <a class="nav-link active" href="{% url 'blog:index' %}">
-              {% endblock %}
-        {% block content %}
-        <h1>Лента записей</h1>                        
-        <!-- Перебираем в цикле все посты -->
-        {% for post in posts %}
-          <hr>
-          <article>
-            <ul>
-              <li>
-                Место: {{ post.location }}             
-              </li>
-              <li>
-                Дата: {{ post.date }}
-              </li>
-              <li>
-                Категория: <a href="{% url 'blog:category_posts' post.category %}">{{ post.category }}</a>
-              </li>
-            </ul>          
-            <!-- Первые 10 слов -->
-            <p>
-              {{ post.text|truncatewords:10  }}
-            </p>
-            <a href={% url 'blog:post_detail' post.id %}>Читать полный текст</a>
-          </article>
-        {% endfor %}
-        {% endblock %}
+
+{% block title %}
+  Лента записей
+{% endblock %}
+
+{% block content %}
+  <h1>Лента записей</h1>
+
+  {% for post in posts %}
+    <hr>
+    {% include "includes/post.html" %}
+  {% endfor %}
+
+{% endblock %}
